--- a/w/wo/wou/wouldyouhitthis.com.html
+++ b/w/wo/wou/wouldyouhitthis.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the wouldyouhitthis.com privacy policy that was archived on 2004-06-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040614002710id_/http%3A//www.wouldyouhitthis.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the wouldyouhitthis.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206195837id_/http%3A//wouldyouhitthis.com/privacy.php) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>WouldYouHitThis? Privacy Policy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link href="style.css" rel="stylesheet" type="text/css">
@@ -78,12 +78,12 @@
 </head>
 
 <body>
-<table width="730" height="100%" border="0" align="center" cellpadding="0" cellspacing="0" class="container">
+<table width="726" height="100%" border="0" align="center" cellpadding="0" cellspacing="0" class="container">
   <tbody><tr> 
-    <td width="5" background="images/main_border_left.gif">&nbsp;</td>
+    <td width="3" background="images/main_border_left.gif"><img src="images/spacer.gif" width="3"></td>
     <td width="136" valign="top">
 	  <a href="index.php"><img src="images/header_logo.gif" width="132" height="60" class="header-logo" border="0"></a>
-	  <div class="header-bar" align="center"><a href="online.php"><strong>605</strong> users online</a></div><div class="box-left" id="myrating" style="background-color:#D4FF9D"> 
+	  <div class="header-bar" align="center"><a href="online.php" class="usersonline"><strong><script language="JavaScript" src="static/online.html"></script>1271</strong> users online</a></div><div class="box-left" id="newsupdate"> 
 <strong><a href="forums.php?tid=23769">Want to win an iPod? Or brand new webcam? Read more...</a></strong></div>
 <div class="box-left" id="memberslogin">
 	<h5>Members Login</h5>
@@ -94,13 +94,14 @@
 	</form>
 	<a href="submit.php" class="menu"><strong>Not a member?</strong><br><br>No problem! Joining is quick, easy, and most importantly <strong><em>FREE!</em></strong><br><br>Just click here to begin!</a>
 	<div class="hr"></div>
-	<a href="javascript:launchPic(300, 270, 'forgotpass.php')"><font size="-1">Forget password?</font></a><font size="-1">
-</font></div><font size="-1">
-	</font></td>
+	<a href="javascript:launchPic(300, 270, 'forgotpass.php')"><font size="-1">Forget password?</font></a>
+</div>
+	</td>
     <td width="11">&nbsp;</td>
-    <td valign="top"> <div class="header-ad"><a href="http://www.amateurmatch.com/index.php?ainfo=MTE1Mnwy"><img src="funpics/datinggoldh2.gif" width="465" border="0"></a>
-<a href="index.php"><img src="images/logo.gif" width="44" height="60" style="margin-left:15px" border="0"></a></div>
-	       <div class="header-bar"><a href="index.php"><img src="images/menu/start_unsel.gif" width="7" height="18" border="0/"><img src="images/menu/rate.gif" width="33" height="18" border="0"><img src="images/menu/unsel.gif" width="18" height="18" border="0"></a><a href="top10.php"><img src="images/menu/top10.gif" width="37" height="18" border="0"><img src="images/menu/unsel.gif" width="18" height="18" border="0"></a><a href="new.php"><img src="images/menu/newest.gif" width="47" height="18" border="0"><img src="images/menu/unsel.gif" width="18" height="18" border="0"></a><a href="history.php"><img src="images/menu/history.gif" width="47" height="18" border="0"><img src="images/menu/unsel.gif" width="18" height="18" border="0"></a><a href="forums.php"><img src="images/menu/forums.gif" width="47" height="18" border="0"><img src="images/menu/unsel.gif" width="18" height="18" border="0"></a><a href="javascript:launchChat();"><img src="images/menu/chat.gif" width="30" height="18" border="0"><img src="images/menu/unsel.gif" width="18" height="18" border="0"></a><a href="search.php"><img src="images/menu/search.gif" width="45" height="18" border="0"></a><img src="images/menu/end_unsel.gif" width="18" height="18" border="0"></div>
+    <td valign="top"> <div class="header-ad">
+	<a href="http://www.adultactioncam.com/hit.php?cid=711986"><img src="funpics/aac7.gif" width="465" border="0"></a>
+<a href="index.php"><img src="images/logo.gif" width="44" height="60" style="margin-left:15px" border="0"></a>	<!--<a href="index.php"><img src="images/logo.gif" width="44" height="60" style="margin-left:15px" border="0" /></a>--></div>
+	       <div class="header-bar"><a href="index.php"><img src="images/menu/start_unsel.gif" width="7" height="18" border="0/"><img src="images/menu/rate.gif" width="33" height="18" border="0"><img src="images/menu/unsel.gif" width="18" height="18" border="0"></a><a href="top10.php"><img src="images/menu/top10.gif" width="37" height="18" border="0"><img src="images/menu/unsel.gif" width="18" height="18" border="0"></a><a href="new.php"><img src="images/menu/newest.gif" width="47" height="18" border="0"><img src="images/menu/unsel.gif" width="18" height="18" border="0"></a><a href="history.php"><img src="images/menu/history.gif" width="47" height="18" border="0"><img src="images/menu/unsel.gif" width="18" height="18" border="0"></a><a href="forums.php"><img src="images/menu/forums.gif" width="47" height="18" border="0"><img src="images/menu/unsel.gif" width="18" height="18" border="0"></a><a href="javascript:launchChat();"><img src="images/menu/chat.gif" width="30" height="18" border="0"><img src="images/menu/unsel.gif" width="18" height="18" border="0"></a><a href="groups.php"><img src="images/menu/groups.gif" width="45" height="18" border="0"><img src="images/menu/unsel.gif" width="18" height="18" border="0"></a><a href="pony.php"><img src="images/menu/pony.gif" width="33" height="18" border="0"><img src="images/menu/unsel.gif" width="18" height="18" border="0"></a><a href="search.php"><img src="images/menu/search.gif" width="45" height="18" border="0"></a><img src="images/menu/end_unsel.gif" width="18" height="18" border="0"></div>
 	  <div class="box-fullcenter">
 <h6>Privacy Policy</h6>
 <br><div class="terms">Privacy Policy for WouldYouHitThis.com:<br>
@@ -153,14 +154,14 @@ webmaster@wouldyouhitthis.com</div>
 </div>
 		
     </td>
-    <td width="5" background="images/main_border_right.gif">&nbsp;</td>
+    <td width="3" background="images/main_border_right.gif" class="table-cell-bg"><img src="images/spacer.gif" width="3"></td>
   </tr>
   <tr>
-    <td width="5" height="5" background="images/main_corner_left.gif"></td>
-    <td height="5" background="images/main_border_bottom.gif"></td>
-    <td height="5" background="images/main_border_bottom.gif"></td>
-    <td height="5" background="images/main_border_bottom.gif"></td>
-    <td width="5" height="5" background="images/main_corner_right.gif"></td>
+    <td width="3" height="3" background="images/main_corner_left.gif"></td>
+    <td height="3" background="images/main_border_bottom.gif"></td>
+    <td height="3" background="images/main_border_bottom.gif"></td>
+    <td height="3" background="images/main_border_bottom.gif"></td>
+    <td width="3" height="3" background="images/main_corner_right.gif"></td>
   </tr>
 </tbody></table><div class="terms">©2003-2004 WouldYouHitThis.com - <a class="terms" href="privacy.php">Privacy Policy</a> - <a class="terms" href="tos.php">Terms of Service</a></div>
 
