--- a/i/ib/ibi/ibisworld.com.html
+++ b/i/ib/ibi/ibisworld.com.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the ibisworld.com privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602231342id_/http%3A//www.ibisworld.com/static/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ibisworld.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206195914id_/http%3A//www.ibisworld.com/static/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
-<title>Market Research Reports by IBISWorld - Industry/Company/Business Economics in Australia</title>
-<meta name="description" content="Australia's largest industry, company and business economics database, providing high-quality market research analysis, reports and publications. Our reports include market research on the size, trends, growth and competitors of every industry, top 2000 companies and many economic statistics.">
+<title>Market Research, Industry Reports and Information on the USA - by IBISWorld</title>
+<meta name="description" content="New to the USA, IBISWorld provides high-quality market research analysis, reports and publications. Our reports include market research on the size, trends, growth and competitors on a growing number of industries - soon to cover all 720 in the USA.">
 <meta name="keywords" content="Market Research, market, research, report, economic research, industry report, company report, industry, company, food, beverage, international business, market research, healthcare, medical, industry, manufacturing, consumer, personal products, materials, demographics, media, entertainment, pharmaceuticals, internet, energy, resources, retailing services, engineering, construction, telecommunications, industrial, networks, financial, transportation, market research, shipping, competitor intelligent, competitor intelligence, market intelligence, business intelligence, industry experts, market growth, market size, strategy, trends, forecasts, projections, company reports, company profiles, company information, industry segment, strategic investment, industry research, analyst research, research consultants, research analysts, research reports">
 <meta name="robots" content="index, follow">
 <meta name="classification" content="Market Research">
