--- a/a/ai/aim/aimini.net.html
+++ b/a/ai/aim/aimini.net.html
@@ -1,18 +1,18 @@
-<!--The following is the downloaded HTML source of the aimini.net privacy policy that was archived on 2004-06-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040610184948id_/http%3A//aimini.com/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the aimini.net privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206200037id_/http%3A//aimini.com/privacypolicy.html) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="Pragma" content="no-cache">
 <title>aimini P2P software</title>
-<meta name="Keywords" content="P2P, Search, Download, Share, Exchange, Talk, Peer to Peer">
-<meta name="Description" content="Person to Person, direct connect up in between users, share and exchange information, search, download and chat with this P2P software.">
+<meta name="Keywords" content="P2P, Direct Connect, Share, Download, Exchange, Talk, Search, Peer to Peer">
+<meta name="Description" content="Person to Person, direct connect up in between users, File Direct-Transfer, search and download from shared files, talks by voice and exchange goods with this P2P software.">
 <meta name="Classification" content="P2P Software">
 <meta name="Distribution" content="Global">
 <style>
 table{font-family:courier,arial,sans-serif;font-size:14px;line-height:150%}
-.title{font-size:16px;font-family:"comic sans ms"}
+.title{font-size:16px;font-family:"Verdana,Tahoma,comic sans ms"}
 </style>
 <style fprolloverstyle="">A:hover{color:#666666;text-decoration:none}</style>
 </head>
@@ -20,28 +20,33 @@ table{font-family:courier,arial,sans-serif;font-size:14px;line-height:150%}
 <center>
 <table border="0" width="100%" height="100%" cellspacing="0" cellpadding="0">
 <tbody><tr>
-<td colspan="3" height="80" valign="top" align="center">
-<table border="0" width="92%" height="60">
+<td width="4%"></td>
+<td width="92%">
+<table border="0" width="100%" height="60">
 <tbody><tr>
 <td>
 <table border="0" width="100%">
 <tbody><tr>
-<td width="100%">
-<a href="http://www.aimini.com"><img border="0" src="images/logo_7.gif" alt="aimini.com" width="240" height="60"></a>
-</td>
-</tr>
-</tbody></table>
+<td width="50%">
+<a href="http://www.aimini.com"><img border="0" src="images/logo258.gif" alt="aimini.com -- P2P Software" width="256" height="60"></a>
 </td>
 <td align="right">
-<table border="0">
-<tbody><tr>
-<td><img border="0" src="images/skybar.gif" width="468" height="60"></td>
-</tr>
-</tbody></table>
+<img border="0" src="images/skybar.gif" alt="Person to Person, Building Your Own P2P World." width="468" height="60">
 </td>
 </tr>
 </tbody></table>
 </td>
+</tr>
+</tbody></table>
+</td>
+<td width="4%"></td>
+</tr>
+<tr>
+<td></td>
+<td>
+<hr color="#FFFFFF" noshade="" size="1">
+</td>
+<td></td>
 </tr>
 <tr>
 <td></td>
@@ -52,7 +57,7 @@ table{font-family:courier,arial,sans-serif;font-size:14px;line-height:150%}
 <table border="0" width="100%" height="100%">
 <tbody><tr>
 <td valign="top">
-<table border="1" width="100%" bordercolor="#FFFFFF" cellpadding="2">
+<table border="1" width="100%" bordercolor="#FFFFFF" cellpadding="2" class="title">
 <tbody><tr>
 <td align="center" bgcolor="#DCDCDC" bordercolorlight="#666666" bordercolordark="#E8E8E8" onmouseover="this.style.backgroundColor='#E8E8E8';this.style.cursor='hand'" onmouseout="this.style.backgroundColor='#DCDCDC'" onmousedown="location='index.html'" width="16%">Home</td>
 <td align="center" bgcolor="#FFB56A" bordercolorlight="#886600" bordercolordark="#FFCF8F" onmouseover="this.style.backgroundColor='#FFCF8F';this.style.cursor='hand'" onmouseout="this.style.backgroundColor='#FFB56A'" onmousedown="location='news/index.html'" width="16%">News</td>
@@ -85,13 +90,13 @@ any customer or client information that may be collected.
 </p><p class="small"><font face="Verdana" size="3" color="#808080">
 •</font> <b><font face="Verdana">What about cookies?</font></b></p>
 <p class="small">"Cookies" are small pieces of information that are
-stored by your browser on your computer's hard drive. <font face="Century Gothic" size="3">aimini</font>.com does not
+stored by your browser on your computer's hard drive. The aimini.com does not
 utilize cookies on this site.</p><p class="small">However, some of our partners sites may use cookies and
 therefore you should review their privacy policies. For example, The Registration company
 are used only to identify the customer, not to identify any specific
 customer traits. These cookies do not store sensitive data. This enables a more
 pleasant shopping experience with registration companies every time you shop with us.
-</p><p class="small">aimini.com does not have access to any of your customer
+</p><p class="small">The aimini.com does not have access to any of your customer
 information that you provide to registration company. For customers, this means that the 3rd
 party credit card processor only has access to your information for processing
 purposes only.<br>
@@ -109,7 +114,7 @@ information?</font></b></p>
 secure server hosted by Registration companies that encrypts all of the customer's personal
 information including name, address and credit card number. Encryption ensures
 that no one can access or use personal information in an unauthorized manner.
-</p><p class="small"><font face="Century Gothic" size="3">aimini</font>.com NEVER gets the credit card number you provide at the Product Order Form. The Registration company you’ve used to register an  
+</p><p class="small">The aimini.com NEVER gets the credit card number you provide at the Product Order Form. The Registration company you’ve used to register an  
 our product is fully responsible for handling the credit card or any other money transfer.<br>  
 <br>
 Please review the privacy policy for our 3rd party credit card processor:&nbsp; <a href="http://www.shareit.com/privacy_statement.html" target="_window">Share-it!</a>.<br>  
@@ -118,7 +123,7 @@ Please review the privacy policy for our 3rd party credit card processor:&nbsp; 
 </p><p class="small">We may provide links to third party sites. Since we do not
 control these Web sites, we encourage you to review the privacy policies posted
 on these (and all) third party sites.
-</p><p class="small">Questions or comments can be directed to <a href="mailto:biz@aimini.com">biz@aimini.com</a></p>
+</p><p class="small">Questions or comments can be directed to <a href="mailto:webmaster@aimini.com">webmaster@aimini.com</a></p>
 <br>
 </td>
 </tr>
@@ -143,7 +148,7 @@ on these (and all) third party sites.
 </td>
 </tr>
 <tr>
-<td align="center">
+<td align="center" style="font-family: Tahoma; font-size: 16px">
 <a href="index.html"><b>Home</b></a> <b> -   
 <a href="news/index.html">News</a> -  
 <a href="download/index.html">Download</a> -  
@@ -182,13 +187,19 @@ on these (and all) third party sites.
 </tr>
 <tr>
 <td width="15%">&nbsp;</td>
-<td width="70%" align="center"><a href="privacypolicy.html">Privacy Policy</a></td> 
+<td width="70%" align="center" style="font-size: 12px"><a href="privacypolicy.html"><font face="Verdana">Privacy Policy</font></a>
+<font color="#808080">-</font> <font face="Verdana"><a class="footerTxt" href="usageterms.html">Usage
+Terms</a></font></td>  
 <td width="15%">&nbsp;</td>
 </tr>
 <tr>
-<td width="15%">&nbsp;</td>
-<td width="70%" style="font-size: 14px" align="center" bgcolor="#E8E8E8"><font face="System" color="#555555">Copyright  © 2003 - 2004 aimini.com.  All rights reserved.</font></td> 
-<td width="15%">&nbsp;</td>
+<td width="100%" colspan="3"></td>
+</tr>
+<tr>
+<td width="100%" colspan="3" align="center" bgcolor="#E8E8E8">&nbsp;<font face="System" color="#282828">Copyright © 2003 - 2004 aimini.com.  All rights reserved.</font></td>
+</tr>
+<tr>
+<td colspan="3"></td>
 </tr>
 </tbody></table>
 </td>
