--- a/n/ne/new/newsherald.com.html
+++ b/n/ne/new/newsherald.com.html
@@ -1,108 +1,102 @@
-<!--The following is the downloaded HTML source of the newsherald.com privacy policy that was archived on 2002-04-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020402160850id_/http%3A//www.newsherald.com/privacyact.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the newsherald.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206200051id_/http%3A//www.newsherald.com/new/privacypolicy.htm) for the most accurate reproduction.-->
 
 <html><head>
-<title>newsherald.com: Privacy Act</title>
-<script language="JavaScript">
-
-<!-- Begin
-function formHandler(){
-var URL = document.form.site.options
-[document.form.site.selectedIndex].value;
-window.location.href = URL;
-// End -->
-}
-</script>
+<title>The News Herald, Panama City, FL.</title>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<link rel="stylesheet" href="newsheraldstylesheet.css" type="text/css">
 </head>
 
-
-<body background="http://www.newsherald.com/graphics/newbackground.gif">
-
-
-<table width="600" border="0" hspace="0" cellspacing="0" cellpadding="1">
-<tbody><tr>
-<td colspan="3">
-<center><a href="http://www.newsherald.com/index.html"><img src="http://www.newsherald.com/graphics/newindex.gif" border="NO" width="525" height="20" alt="newsherald.com Home Page"></a><br>
-<img src="http://www.newsherald.com/space.gif" width="550" height="8"><br>
-</center><br>
-</td>
-</tr>
-</tbody></table>
+<body bgcolor="#FFFFFF" text="#000000" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+<!--BEGINNING OF HEADER-->
+<!--#include virtual="/includes/inc_header_NEW.htm" -->
+<!-- BEGIN 468 BANNER -->
+<!--#include virtual="/includes/inc_pcnh_468x60_NEW.htm" -->
+<!--BEGINNING OF DATE-->
+<!--#include virtual="/includes/inc_date_NEW.htm" -->
 
 
+<!--BEGINNING OF CONTENT-->
 
-<table width="600" border="0" hspace="0" cellspacing="0" cellpadding="1">
-<tbody><tr>
-<td width="150" valign="TOP" align="LEFT">
-<img src="http://www.newsherald.com/FREEDOM2.GIF" height="72" width="72" border="0" alt="Copyright"><br>
-</td>
+   <h3>Freedom Interactive<br>Media Online Privacy Policy</h3>
+<p class="txt">THE NEWS HERALD Web site is maintained by Freedom Interactive Newspapers 
+  of Florida, Inc., 36008 Emerald Coast Parkway #501, Destin, Florida 32541. We 
+  can be reached by e-mail at flportal@link.freedom.com. 
+</p><p><span class="titletxt">HOW THE NEWS HERALD USES INFORMATION PROVIDED BY YOU</span>: 
+  <span class="txt">This site does not collect personally identifiable information 
+  about individuals except when specifically and knowingly provided by such individuals. 
+  A user's personally identifiable information may be used by The News Herald 
+  and its affiliates for editorial purposes. THE NEWS HERALD may also use such 
+  information for marketing and promotional purposes. We may share your personally 
+  identifiable information with other companies with which we conduct business. 
+  For example, if you enter our contests, make a purchase or use our e-mail services, 
+  we sometimes rely on outside companies to provide these services to you. In 
+  such cases, we need to provide your personally identifiable information to them. 
+  Or if you choose to purchase items through our commerce site, we will forward 
+  your information to third parties for credit card processing and order fulfillment. 
+  We also sometimes provide your information to our advertisers, so that they 
+  can serve ads to you that meet your needs. While THE NEWS HERALD will seek to 
+  require such third parties to follow appropriate privacy policies and will not 
+  authorize them to use this information except for the express purpose for which 
+  it was provided, THE NEWS HERALD does not bear any responsibility for any actions 
+  or policies of any third parties. </span>
+</p><p class="txt">Except for purposes outlined above, we do not provide, sell or 
+  lease your personally identifiable information to any third parties, unless 
+  otherwise stated at the time of collection. If you have any questions or concerns 
+  regarding what is done with your information on any part of THE NEWS HERALD, 
+  please e-mail us at THE NEWS HERALD at flportal@link.freedom.com, before submitting 
+  any information. 
+</p><p class="txt">We also collect anonymous, aggregated data and provide it to our 
+  advertisers and other companies that we do business with for market research 
+  and statistical purposes. For example, we might report to our advertisers that 
+  a certain percentage of users are between the ages of 30-35. 
+</p><p class="txt">Finally, you should be aware that when you voluntarily disclose 
+  personally identifiable information (e.g., first and last name, address, e-mail 
+  address, etc.) on the forums or in the chat areas, that information can be collected 
+  and used by others and may result in unsolicited messages from other posters 
+  or parties. 
+</p><p><span class="titletxt">COOKIES</span>: <span class="txt">THE NEWS HERALD may 
+  place a "cookie" in the browser files of THE NEWS HERALD user's computer. The 
+  cookie may contain personally identifiable information. Cookies enable THE NEWS 
+  HERALD to serve information that you have requested, or that relate to your 
+  use of THE NEWS HERALD to information that you have specifically and knowingly 
+  provided to THE NEWS HERALD. You also may occasionally get cookies from our 
+  advertisers. THE NEWS HERALD does not control these cookies and these cookies 
+  are not subject to this policy. The use of advertising cookies sent by third-party 
+  servers is common in the Internet industry. Most browsers are initially set 
+  to accept cookies. If you prefer, you can set your browser to refuse cookies 
+  or to alert you when cookies are being sent. However, it is possible that some 
+  portions of THE NEWS HERALD will not function properly if you do so. For further 
+  information on cookies and their use, see the help instructions delivered with 
+  your browser or contact the browser's manufacturer. THE NEWS HERALD cannot provide 
+  help regarding your browser's cookie settings. </span>
+</p><p><span class="titletxt">CHILDREN</span>: <span class="txt">Be sure to ask your 
+  parents for permission before you send any information about yourself (your 
+  name, address, e-mail address, etc.) to us or anyone else over the Internet, 
+  and before making any purchases online. </span>
+</p><p><span class="titletxt">PARENTS</span>: <span class="txt">We encourage you to 
+  get involved with your children's online usage and to be aware of the activities 
+  in which they are participating. Any personally identifiable information collected 
+  by THE NEWS HERALD from children (that we are aware are children) will be used 
+  only for THE NEWS HERALD internal purposes such as market research, sweepstakes 
+  fulfillment and for fulfilling requests for information or materials, and may 
+  sometimes be included in our database. However, such information will not be 
+  posted or published by us, or provided to any third parties, without your prior 
+  consent. Additionally, anonymous aggregated data is sometimes provided to other 
+  companies which we do business with, for statistical and market research purposes 
+  as described above. Finally, you should be aware that if your child voluntarily 
+  discloses his name, e-mail address, etc. on various forums, or chat areas, such 
+  disclosure may result in unsolicited messages from other parties. Accordingly, 
+  you should discourage your child from doing so. </span>
+</p><p><span class="txt">Again, if you have any concerns regarding your child's or 
+  your use of THE NEWS HERALD, please contact us at flportal@link.freedom.com. 
+  </span><br>
+  <br>
+  <br>
+  <!--BEGIN TILE ADS-->
+  <!--#include virtual="/includes/inc_pcnh_120x90_NEW.htm" -->
+  <!--BEGIN FOOTER-->
+  <!--#include virtual="/includes/inc_footer_NEW.htm" -->
 
-<td width="450" valign="TOP" align="LEFT">
-<center><a href="http://www.newsherald.com/SUBSCRIB.HTM"><img src="http://www.newsherald.com/ads/12wkbanner.gif" width="468" height="60" border="0"></a></center>
-<br>
-</td>
-</tr>
-</tbody></table>
 
-
-
-<table width="600" border="0" hspace="0" cellspacing="0" cellpadding="2">
-<tbody><tr>
-<td width="130" valign="TOP" align="LEFT">
-<font size="2" face="ARIAL"><b>
-
-<a href="http://www.newsherald.com">
-<img src="http://www.newsherald.com/graphics/backhome.gif" width="100" height="26" border="0" alt="Back to newsherald.com"></a>
-
-
-</b>
-</font>
-</td>
-
-
-
-
-
-<td width="470" align="LEFT" valign="TOP">
-
-
-
-
-<font face="verdana, arial, helvetica" size="2">
-
-
-
-
-<h3>Freedom Interactive<br>Media Online Privacy Policy</h3>
-<p>THE NEWS HERALD Web site is maintained by Freedom Interactive Newspapers of Florida, Inc., 36008 Emerald Coast Parkway #501, Destin, Florida 32541. We can be reached by e-mail at jcoleman@link.freedom.com.
-</p><p>HOW THE NEWS HERALD USES INFORMATION PROVIDED BY YOU: This site does not collect personally identifiable information about individuals except when specifically and knowingly provided by such individuals. A user's personally identifiable information may be used by The News Herald and its affiliates for editorial purposes. THE NEWS HERALD may also use such information for marketing and promotional purposes. We may share your personally identifiable information with other companies with which we conduct business. For example, if you enter our contests, make a purchase or use our e-mail services, we sometimes rely on outside companies to provide these services to you. In such cases, we need to provide your personally identifiable information to them. Or if you choose to purchase items through our commerce site, we will forward your information to third parties for credit card processing and order fulfillment. We also sometimes provide your information to our advertisers, so that they can serve ads to you that meet your needs. While THE NEWS HERALD will seek to require such third parties to follow appropriate privacy policies and will not authorize them to use this information except for the express purpose for which it was provided, THE NEWS HERALD does not bear any responsibility for any actions or policies of any third parties. 
-</p><p>Except for purposes outlined above, we do not provide, sell or lease your personally identifiable information to any third parties, unless otherwise stated at the time of collection. If you have any questions or concerns regarding what is done with your information on any part of THE NEWS HERALD, please e-mail us at THE NEWS HERALD at jcoleman@link.freedom.com, before submitting any information. 
-</p><p>We also collect anonymous, aggregated data and provide it to our advertisers and other companies that we do business with for market research and statistical purposes. For example, we might report to our advertisers that a certain percentage of users are between the ages of 30-35. 
-</p><p>Finally, you should be aware that when you voluntarily disclose personally identifiable information (e.g., first and last name, address, e-mail address, etc.) on the forums or in the chat areas, that information can be collected and used by others and may result in unsolicited messages from other posters or parties. 
-</p><p>COOKIES: THE NEWS HERALD may place a "cookie" in the browser files of THE NEWS HERALD user's computer. The cookie may contain personally identifiable information. Cookies enable THE NEWS HERALD to serve information that you have requested, or that relate to your use of THE NEWS HERALD to information that you have specifically and knowingly provided to THE NEWS HERALD. You also may occasionally get cookies from our advertisers. THE NEWS HERALD does not control these cookies and these cookies are not subject to this policy. The use of advertising cookies sent by third-party servers is common in the Internet industry. Most browsers are initially set to accept cookies. If you prefer, you can set your browser to refuse cookies or to alert you when cookies are being sent. However, it is possible that some portions of THE NEWS HERALD will not function properly if you do so. For further information on cookies and their use, see the help instructions delivered with your browser or contact the browser's manufacturer. THE NEWS HERALD cannot provide help regarding your browser's cookie settings. 
-</p><p>CHILDREN: Be sure to ask your parents for permission before you send any information about yourself (your name, address, e-mail address, etc.) to us or anyone else over the Internet, and before making any purchases online. 
-</p><p>PARENTS: We encourage you to get involved with your children's online usage and to be aware of the activities in which they are participating. Any personally identifiable information collected by THE NEWS HERALD from children (that we are aware are children) will be used only for THE NEWS HERALD internal purposes such as market research, sweepstakes fulfillment and for fulfilling requests for information or materials, and may sometimes be included in our database. However, such information will not be posted or published by us, or provided to any third parties, without your prior consent. Additionally, anonymous aggregated data is sometimes provided to other companies which we do business with, for statistical and market research purposes as described above. Finally, you should be aware that if your child voluntarily discloses his name, e-mail address, etc. on various forums, or chat areas, such disclosure may result in unsolicited messages from other parties. Accordingly, you should discourage your child from doing so. 
-</p><p>Again, if you have any concerns regarding your child's or your use of THE NEWS HERALD, please contact us at jcoleman@link.freedom.com.
-
-
-
-
-
-
-<font size="2" face="ARIAL">
-<small><small><b>
-<br><br>
-</b></small></small></font></p><center><font size="2" face="ARIAL"><small><small><b>
-<hr width="130">
-© <i>The News Herald</i><br>
-<a href="http://www.newsherald.com/copyright.htm">Copyright Notice</a><br>
-</b></small><b>
-</b></small></font></center><font size="2" face="ARIAL"><small><b>
-</b></small></font><small><b>
-
-</b></small></font></td>
-</tr>
-
-</tbody></table>
-
-</body></html>
+</p></body></html>
